Revision history for Perl extension Math::BigInt::FastCalc.

2011-02-26 0.28 pjacklam (7560 tests)
  * Sync codebases (CPAN vs. blead): include t/mbi_rand.t from blead,
    fix typos in FastCalc.xs and t/bigintfc.t (Peter John Acklam).
  * Remove redundant Math::BigInt::FastCalc version info from diagnostic
    output of 01load.t (Peter John Acklam).

2011-02-26 0.27 pjacklam (7560 tests)
  * Add Math::BigInt::Calc version information to diagnostics output of
    01load.t. This is useful for debugging, since Math::BigInt::FastCalc
    relies heavily on Math::BigInt::Calc (Peter John Acklam).
  * Change bigintpm.inc to reflect recent changes in the Math::BigInt
    distribution (Peter John Acklam).

2011-02-08 0.26 pjacklam (7560 tests)
  * Add Perl v5.6 compatibility code to FastCalc.xs (RT #63859)
    (Peter John Acklam).
  * Add 00sig.t for testing SIGNATURE, and 01load.t for basic module loading
    and giving diagnostics useful for bug tracking (Peter John Acklam).
  * Rename pod.t to 02pod.t and pod_cov.t to 03podcov.t and use more generic
    code (Peter John Acklam).

2011-02-06 0.251 pjacklam (7558 tests)
  * Add requirement Math::BigInt version 1.991 (Peter John Acklam).

2011-02-05 0.25 pjacklam (7558 tests)
  * Remove _new() from XS code and use _new() in Math::BigInt::Calc
    instead. The XS _new() doesn't handle integers that are too large to
    be represented exactly as floating point numbers, but small enough
    to be represented as 64 bit integers. The XS _new() also returns
    nan, not inf, when it overflows. This closes RT #63335 and RT #49569
    (Peter John Acklam).
  * Copied test files from latest Math::BigInt (v1.991): bigfltpm.inc,
    bigfltpm.t, bigintpm.inc, bigintpm.t, mbi_rand.t, mbimbf.inc,
    mbimbf.t (Peter John Acklam).

2010-11-07 0.24 rafl (6938 tests)
  * Reduce repetition (and object size) in FastCalc.xs by using ALIASes
    (Nicholas Clark).
  * inline the macros CONSTANT_OBJ and RETURN_MORTAL_BOOL. (Nicholas Clark).