@@ -8,7 +8,7 @@ use Math::BigInt::Calc 1.993;
 
 use vars '$VERSION';
 
-$VERSION = '0.28';
+$VERSION = '0.29';
 
 ##############################################################################
 # global constants, flags and accessory
@@ -97,7 +97,7 @@ the same terms as Perl itself.
 
 Original math code by Mark Biggar, rewritten by Tels L<http://bloodgate.com/>
 in late 2000.
-Seperated from BigInt and shaped API with the help of John Peacock.
+Separated from BigInt and shaped API with the help of John Peacock.
 
 Fixed, sped-up and enhanced by Tels http://bloodgate.com 2001-2003.
 Further streamlining (api_version 1 etc.) by Tels 2004-2007.
